BA Latex-Dateien

--- a/Latex_BA/Hauptteil.tex
+++ b/Latex_BA/Hauptteil.tex
@@ -481,7 +481,7 @@ Durch die gewählten Parameter wird alle 0.15 Sekunden eine Neuberechnung der Ra
 
 Abbildung \ref{fig:Adler_Spektogramm} zeigt das Spektogramm des Adlergeräusches. Es ist zu erkennen, dass das Geräusch ein breites Frequenzspektrum besitzt, jedoch die meisten Frequenzen zwischen 2 und 4 kHz liegen. Über den zeitlichen Verlauf lässt sich sagen, dass das Signal sich vor allem durch ein kurzes intensives Geräusch am Anfang auszeichnet, dass im Frequenzbereich zwischen 2 kHz und 4 kHz noch einige Sekunden ausklingt während die höheren Frequenzen schneller nachlassen.\\
 
- Der Schrei eines Adlers ist ein Geräusch, dass vermutlich jedem Probanden aus Fernsehen oder anderen Medien bekannt sein sollte. Gleichzeitig werden die meisten Probanden diesem Geräusch vermutlich noch nie in ihrem echten Leben begegnet sein. 
+ Der Schrei eines Adlers ist ein Geräusch, dass vermutlich jedem Probanden aus Fernsehen oder anderen Medien bekannt sein sollte. Gleichzeitig werden die meisten Probanden diesem Geräusch vermutlich noch nie in ihrem echten Leben begegnet sein.
 
 \subsection{Szene 2 - Wolfsheulen}
 
@@ -620,7 +620,7 @@ Sind nach der Einweisung noch Fragen offen, so kann der Proband diese vor dem Be
  
  \section{Probanden}
  
- Bei den für den Hörversuch ausgewählten Probanden handelt es sich hauptsächlich um Studierende der Hochschule Emden/Leer. Der Hörversuch wurde hierbei mit 15 unterschiedlichen Probanden durchgeführt, wobei leider einige aus Zeitgründen nicht alle Szenen des Versuchs durchführen konnten. \\
+ Bei den für den Hörversuch ausgewählten Probanden handelt es sich hauptsächlich um Studierende der Hochschule Emden/Leer. Der Hörversuch wurde hierbei mit 17 unterschiedlichen Probanden durchgeführt, wobei leider einige aus Zeitgründen nicht alle Szenen des Versuchs durchführen konnten und vereinzelnd Probandendaten aufgrund von Bugs der App verloren gegangen sind. \\
  
   Das Alter der Probanden lag hierbei zwischen 20 und 50 Jahren, wobei die meisten zwischen 20 und 30 Jahren alt waren. Anzumerken ist hierbei, dass die abgespielten Geräusch aller eher niederfrequent waren und daher eine Beeinflussung der Ergebnisse durch das Alter in der Auswertung vernachlässigt wird. \\ 
   
@@ -628,9 +628,10 @@ Sind nach der Einweisung noch Fragen offen, so kann der Proband diese vor dem Be
  
  Der Hörversuch erfolgte anonym und ohne Erfassung persönlicher Daten. Die Auswertung der Probandendaten erfolgt ohne Hintergrundinformationen über die Probanden und basiert ausschließlich auf den durch die App gespeicherten Daten. Für sicherere Versuchsergebnisse sollte der Hörversuch mit einer größeren Menge an Probanden, sowie einer Erfassung der persönlichen Probandendaten, wiederholt werden.
  
- \chapter{Versuchsergebnisse}
+ \chapter{Auswertung des Hörversuchs}
  Im Rahmen dieser Bachelorarbeit wurde ein Hörversuch mit binauralem, räumlichem Audio durchgeführt. Ziel des Hörversuches ist es herauszufinden inwiefern die natürliche Lokalisationsfähigkeit von Hörereignissen in einer Mixed Reality Umgebung gegeben ist. Bei der Durchführung des Hörversuches haben die Probanden für fünf verschiedene Audio-Szenen jeweils versucht die virtuelle Schallquelle zu lokalisieren.  Zusätzlich haben sie jeweils Fragen zum Darbietungsempfinden anhand bestimmter Kriterien beantwortet.  Die Ergebnisse des durchgeführten Hörversuches sollen im Folgenden analysiert werden.
  
+ \section{Vorstellung der Versuchsergebnisse}
  Während des Versuchs hatten die Probanden für jede Szene die Aufgabe eine rote Kugel genau dort zu platzieren, wo sie die virtuelle Schallquelle anhand des Gehörten vermuteten. Die Position der roten Kugel wurde hierbei für jeden Probanden, für jede Szene dokumentiert. Es gilt nun die Daten die gesammelten Daten zu analysieren. \\
  
  Zur Visualisierung der Probandenergebnisse wird die virtuelle Welt zusammen mit der wirklichen, virtuellen Schallquelle und den von den Probanden lokalisierten, virtuellen Schallquellen dargestellt. Die echte, virtuelle Schallquelle wird, sofern es eine gibt, durch eine rosa Kugel und die von den Probanden lokalisierte virtuelle Schallquelle durch  kleinere, rote Kugeln dargestellt. Hierbei ist anzumerken, dass die Platzierung der roten Kugel aufgrund fehlender Übung mit dem Umgang der HoloLens nicht komplett genau erfolgen konnte. Es sollte daher bei der Analyse berücksichtigt werden, dass die Probanden die Kugel vielleicht nicht genau da platzieren konnten, wo sie die Schallquelle ganz genau gehört haben. 
@@ -665,31 +666,50 @@ Die Platzierung der Schallquelle über dem Probanden könnte ein Indiz dafür se
 \end{minipage}
 \end{figure}
 
+
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_1_Frage_1.png}
-\caption{Histogramm der ersten Frage des Versuches für Szene 1}
+\caption{Histogramm: Wie gut passen Visuelles und Auditives in Szene 1 zusammen?}
 \label{fig:Szene_1_Frage1}
 \end{figure} 
+
+Bei der Beurteilung, ob Visuelles und Auditives zusammen passen waren die Meinungen sehr unterschiedlich, siehe Abbildung \ref{fig:Szene_1_Frage1}. Wohingegen sieben Probanden die visuelle und auditive  Darbietung als wenig bis gar nicht als zusammenpassend empfunden haben, haben nur für drei Probanden diese halbwegs zusammengepasst. Damit kann für die erste Szene festgehalten werden, dass die auditive und visuelle Darbietung eher geringfügig zusammen passen. \\
+
+Grund für die eher suboptimale Darbietung könnte unter anderem sein, dass die virtuelle Schallquelle nicht auf dem Adler sondern im Adlernest liegt und daher das gehörte Geräusch nicht zur Position des Adlers passt. Allerdings könnte das Geräusch auch an sich als unpassend zum 3D-Modell des Adlers bewertet werden. Des Weiteren muss immer beachtet werden, dass das Visuelle statisch ist, während das Auditive sich zeitlich verändert. \\ 
+
+Anhand der Abbildung \ref{fig:Szene_1_Frage2} lässt sich deuten, dass das Geräusch wirklich als Bestandteil des Raumes wahrgenommen wird. Für nur zwei Probanden wirkt das Geräusche als halbwegs unrealistisch, während es für alle anderen Probanden als halbwegs realistische bis komplett realistische Quelle im Raum wahrgenommen wird. Es kann für die erste Szene daher von einer erfolgreichen Auralisierung gesprochen werden, bei der die Schallquelle wirklich als plausibler Bestandteil des Raumes wahrgenommen werden kann. 
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_1_Frage_2.png}
-\caption{Histogramm der zweiten Frage des Versuches für Szene 1}
+\caption{Histogramm: Wie echt wirkt das Geräusch im Raum in Szene 1?}
 \label{fig:Szene_1_Frage2}
 \end{figure} 
+
+Abbildung \ref{fig:Szene_1_Frage3} zeigt eindeutig, dass die Darbietung von fast allen Probanden als unheimlich empfunden wird. 14 der 16 Probanden haben dabei die Darbietung mit drei oder höher auf der \glqq Unheimlichkeits\grqq{}-Skala bewertet. Die Darbietung scheint, wie es die Bewertungen erkennen lassen, wirklich unheimlich bei den Probanden angekommen zu sein.\\
+
+Vereint man diese Erkenntnis mit den Ergebnisse aus Abbildung \ref{fig:Szene_1_Frage2}, dann bekräftigt das empfundene Unbehagen der Probanden die These eines \glqq Uncanny-Valley\grqq{}-Effekts für realistisches, räumliches Audio. Die Schallquelle wird größtenteils als realistische Quelle im Raum wahrgenommen und gleichzeitig wird bei fast allen Probanden durch die Darbietung Unbehagen ausgelöst. Dieser Aspekt soll auch in den folgenden Szene noch weiter beobachtet werden. \\
+
+Anhand der Ergebnisse der Fragen lässt sich schwer eine Aussage über das Immersionsempfinden der Probanden aufstellen. Die weitläufige Verteilung der Antworten auf die Frage, ob Visuelles und Auditives als zusammenpassend wahrgenommen werden lässt vermuten, dass die Probanden auch unterschiedliche stark in die virtuelle Welt eintauchen konnten. Besonders die Tatsache, dass die Szene fast ausnahmslos als unheimlich empfunden worden ist, könnte, trotz der empfundenen Echtheit der Schallquelle im Raum, eine Immersion der Probanden in die erweiterte Realität verhindert haben. \\
+
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_1_Frage_3.png}
-\caption{Histogramm der dritten Frage des Versuches für Szene 1}
+\caption{Histogramm: Wie angenehm war die Darbietung von Szene 1?}
 \label{fig:Szene_1_Frage3}
 \end{figure} 
 
-SZENE 1 ENDE
+
 
  \subsection{Szene 2: Wolfsheulen}
- SZENE 2 ANFANG
+ Bei der zweiten Szene wurden die selben Audio-Einstellungen wie bei der ersten Szene gewählt. Die virtuelle Schallquelle wurde hierbei auf dem schwarzen Wolf im Wald platziert und gibt das Heulen eines Wolfes wieder. Das Besondere an der Szene ist, dass neben dem schwarzen Wolf ein weiterer, offensichtlicherer, weißer Wolf zu sehen ist, der als potentielle virtuelle Schallquelle dienen könnte. \\
+ 
+In Abbildung \ref{fig:Szene_2_data} lässt sich erkennen, dass ein Großteil der Probanden die virtuelle Schallquelle auf dem weißen Wolf lokalisiert hat und nur wenige an der Position des schwarzen Wolfes. Einige wenige haben die virtuelle Schallquelle außerhalb des Waldes aber in der richtigen Höhe wahrgenommen und zwei Probanden haben die Hörereignisse wieder unmittelbar über dem Gebirge lokalisiert.  \\
+
+Anscheinend konnte durch die räumliche Wiedergabe nicht darauf geschlossen werden, welcher der Wölfe die virtuelle Schallquelle darstellt. Da der weiße Wolf, etwas größer und von nicht so vielen Bäumen verdeckt worden ist, wurde das Hörereignis vermutlich eher in seiner Richtung lokalisiert. Es gilt also aufzupassen, dass beim Einsatz von räumlichem Audio nicht zu viele visuelle, potentielle Schallquellen im Raum sind, da es sonst zu Fehlinterpretationen bezüglich des Nutzers kommen kann. 
+ 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 16cm, height = 9cm]{Szene_2_data.png}
@@ -697,31 +717,47 @@ SZENE 1 ENDE
 \label{fig:Szene_2_data}
 \end{figure} 
 
+Wie auch schon in der ersten Szene ist das Empfinden, ob das Visuelle und das Auditive zusammenpassen wieder sehr unterschiedlich, jedoch im Vergleich zur ersten Szene etwas positiver, siehe Abbildung \ref{fig:Szene_2_Frage1}. Während die meisten Probanden das Zusammenspiel wieder als mittelmäßig bewertet haben, so gibt es diesmal weniger die behaupten, dass das Gehörte und das Gesehene gar nicht zusammen passen würden. 
+
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_2_Frage_1.png}
-\caption{Histogramm der ersten Frage des Versuches für Szene 2}
+\caption{Histogramm: Wie gut passen Visuelles und Auditives in Szene 2 zusammen ?}
 \label{fig:Szene_2_Frage1}
 \end{figure} 
+
+Anhand Abbildung \ref{fig:Szene_2_Frage2} lässt sich erkennen, dass das Geräusch als noch realer eingestuft worden ist als der Adlerschrei in Szene 1. Hierfür könnte es mehrere Gründe geben. Zum einen befindet sich die virtuelle Schallquelle in einer anderen Höhe als die der ersten Szene, so dass andere kopfbezogene Übertragungsfunktionen verwendet werden, die unter Umständen weniger gut zutreffend für die Probanden sind. Zum anderen könnte auch das Geräusch selbst ausschlaggebend sein.\\
+
+Inhaltlich ist das Heulen eines Hundes bzw. Wolfes in einem Raum ein vertrauteres Geräusch als der Schrei eines Vogels, der vermutlich so niemals in einem Laborraum, auf der Höhe eines Tisches vorkommen wird. Die inhaltliche Einordnung des Geräusches könnte bewirken, dass das Heulen eines Hundes eher als plausibles Hörereignis im Raum wahrgenommen wird als der Schrei eines Adlers.  
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_2_Frage_2.png}
-\caption{Histogramm der zweiten Frage des Versuches für Szene 2}
-\label{fig:Szene_2_Frage1}
+\caption{Histogramm: Wie echt wirkt das Geräusch im Raum in Szene 2?}
+\label{fig:Szene_2_Frage2}
 \end{figure} 
+
+In Abbildung \ref{fig:Szene_2_Frage3} lässt sich erkennen, dass die Darbietung von Szene 2 genau wie die erste Szene auf die meisten Probanden sehr unheimlich gewirkt hat, es jedoch auch mehr Ausnahmen gab als bei Szene 1. Ein Proband hat hierbei die Szene sogar mit der angenehmsten Bewertungsstufe versehen. Drei weitere Probanden haben die Szene ebenfalls als angenehm eingestuft. Das allgemeine Unwohlsein bei der Szene könnte wie bei der vorherigen Szene  durch den zu hohe Realismus der Audio-Wiedergabe impliziert werden. \\ 
+
+Ein anderer für das Unwohlsein der Probanden bei der Szene könnte auch der inhaltliche Kontext des Geräusches sein. Dem Heulen eines Wolfes könnte mit Angst gegenübergetreten werden und dem Heulen eines Hundes mit Empathie. In beiden Fällen bedeutet dies, dass die Szene Unbehagen auslöst.  \\
+
+Wie schon bei der ersten Szene lässt sich anhand der Probandenergebnisse nicht wirklich beurteilen, wie gut eine Immersion der Probanden in die erweiterte Realität gelungen ist. Das empfundene Unbehagen der Probanden lässt auch in dieser Szene vermutlich keine Immersion zu. 
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_2_Frage_3.png}
-\caption{Histogramm der dritten Frage des Versuches für Szene 2}
-\label{fig:Szene_2_Frage1}
+\caption{Histogramm: Wie angenehm war die Darbietung von Szene 2?}
+\label{fig:Szene_2_Frage3}
 \end{figure} 
 
-SZENE 2 ENDE
-
  \subsection{Szene 3: Kirchenglocken}
- SZENE 3 ANFANG
+Im Vergleich zu den ersten beiden Szenen wird in Szene 3 keine Form von räumlichen Audio verwendet. Stattdessen werden das Erklingen von Kirchenglocken mono über die Kopfhörer wiedergegeben.\\
+
+Wie anhand von Abbildung \ref{fig:Szene_3_data} zu sehen ist, lokalisieren die meisten Probanden das Hörereignis im vorderen Kirchturm. Daraus lässt sich schließen, dass auch ohne räumliches Audio die Schallquellen fast ausschließlich dort lokalisiert werden, wo es vom inhaltlichen Kontext her hin passt.\\
+
+Auffällig sind hierbei die wenigen Ausreißer, die fast alle auf einer Vertikalen in der Mitte der virtuellen Welt liegen und dabei alle eine unterschiedliche Höhe haben. Dies liegt vermutlich daran, dass durch die Mono-Wiedergabe keine interauralen Laufzeitunterschiede zustande kommen und dies sonst nur der Fall ist wenn das zu lokalisierende Hörereignis in der Medianebene des Hörerenden liegt. Startet die Szene schaut der Proband zu aller erst gerade auf die Welt, so dass er denken könnte in dieser Ebene müsse die Schallquelle liegen.
+
+ 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 16cm, height = 9cm]{Szene_3_data.png}
@@ -729,71 +765,107 @@ SZENE 2 ENDE
 \label{fig:Szene_3_data}
 \end{figure} 
 
+Auch bei der Mono-Wiedergabe werden das Visuelle und  das Auditive als nicht zusammenpassend bewertet. Die Probanden sind sich bis auf einen einzigen einig, dass die Mono-Wiedergabe der Kirchenglocken gar nicht bis kaum zu den virtuellen Kirchenglocken passt.
+
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_3_Frage_1.png}
-\caption{Histogramm der ersten Frage des Versuches für Szene 3}
-\label{fig:Szene_1_Frage1}
+\caption{Wie gut passen Visuelles und Auditives in Szene 3 zusammen?}
+\label{fig:Szene_3_Frage1}
 \end{figure} 
+
+Überraschend ist, dass trotz der Mono-Wiedergabe ein Großteil der Probanden das Hörereignis als realistisches Geräusch im Raum wahrgenommen hat, siehe Abbildung \ref{fig:Szene_3_Frage2}. Viele weitere Probanden haben das Geräusch als Teilweise unrealistisch wahrgenommen und nur wenige haben für sich entschieden, dass das Geräusch ganz offensichtlich aus den Kopfhörern kommt. Fraglich ist ob die Probanden, die die Szene als realistisch empfunden haben, den Unterschied zu den ersten Szenen nicht gehört haben oder ob sie den wahrgenommenen Unterschied als irrelevant für die Bewertung der Echtheit ansehen. 
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_3_Frage_2.png}
-\caption{Histogramm der zweiten Frage des Versuches für Szene 3}
-\label{fig:Szene_1_Frage2}
+\caption{Histogramm: Wie echt wirkt das Geräusch im Raum in Szene 3?}
+\label{fig:Szene_3_Frage2}
 \end{figure} 
+
+In Abbildung \ref{fig:Szene_3_Frage3} lässt sich erkennen, dass wie bei den ersten beiden Szenen viele Probanden die Darbietung als unheimlich empfinden. Der Anteil an Probanden, die die Szene jedoch als angenehm empfinden ist beachtlich höher als bei den ersten beiden Szenen. So empfinden sechs Probanden die Szene eher angenehm als unheimlich. \\
+
+Ein Grund für das angenehmere Darbietungsempfinden könnte sein, dass das das Erklingen von Glocken generell angenehmer ist als das Heulen eines Wolfes oder der Schrei eines Adlers. Dies lässt sich unter anderem auch am bereits erwähnten harmonischen Klang des Geräusches  begründen.  \\
+
+Natürlich könnte das im Vergleich zu den Szenen mit räumlichem Audio angenehmere Darbietungsempfinden auch das Resultat der fehlenden, räumlichen Anpassung der Audio-Signale sein, dessen extremer Realismus beim Hörenden Unbehagen bewirken könnte.
+
+Mit fünf Probanden, die die Szene als komplett unheimlich bewerten und den Ergebnissen aus den vorherigen Szenen liegt es nah, dass die generelle Darbietung unabhängig vom Geräusch als unheimlich wahrgenommen werden könnte. Das Unwohlsein könnte dementsprechend auch einfach durch die ungewohnte Situation mit der HoloLens in einer Mixed-Reality-Umgebung evoziert werden. \\
+
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_3_Frage_3.png}
-\caption{Histogramm der dritten Frage des Versuches für Szene 3}
-\label{fig:Szene_1_Frage3}
+\caption{Histogramm: Wie angenehm war die Darbietung von Szene 3?}
+\label{fig:Szene_3_Frage3}
 \end{figure} 
 
-SZENE 3 ENDE
+Auch in der dritten Szene ist zu vermuten, dass die meisten Probanden, wie in dieser Szene zu erwarten war,  keine wirkliche Immersion empfinden konnten. Grund dafür ist, dass die visuellen und auditiven Reize erneut als nicht zusammenpassend empfunden worden sind, die Hörereignisse zudem eher als aus dem Kopfhörer kommend wahrgenommen worden sind und auch hier die Darbietung bei den meisten eher Unbehagen ausgelöst hat. 
 
  \subsection{Szene 4: Adler in der Luft}
- SZENE 4 ANFANG
+In der vierten Szene werden wieder die Standart-Einstellungen für das räumliche Audio des Hörversuchs übernommen. Die virtuelle Schallquelle wurde hierbei über den Probanden platziert, so dass diese um den visualisierten Adler sehen zu können, nach oben schauen mussten. Bei dem Geräusch handelt es sich erneut um den Adlerschrei aus der ersten Szene. Im Vergleich zur ersten Szene sollte die Position des Geräusches nun besser an den inhaltlichen Kontext angepasst sein. \\
+
+Abbildung \ref{fig:Szene_4_data} zeigt, erneut die Verteilung der lokalisierten Schallquellen. Es ist zu erkennen, dass wie bisher in keiner anderen Szene vorher die virtuelle Schallquelle im Raum gestreut lokalisiert worden ist. Während zwei Probanden den Adler über sich ausmachen und als Schallquelle identifizieren konnten, haben vier andere Probanden erneut das Hörereignis beim Adler unmittelbar über dem Berg lokalisiert. \\
+
+Bemerkenswert ist, dass die meisten Probanden erkennen konnten, dass das Hörereignis aus nicht mehr aus der Richtung der tiefer fliegenden Adler kommt und stattdessen die Schallquelle irgendwo im Raum lokalisiert haben. Dabei variieren zum ersten mal für die Szenen mit räumlichem Audio die Höhen der platzierten roten Kugeln. Die Probanden konnten also feststellen, dass die virtuelle Schallquelle über der Welt liegen muss, hatten aber Probleme ohne offensichtliche Visualisierung die richtige Position und die richtige Höhe zu ermitteln. Es ist anzunehmen, dass die meisten Probanden den Adler nicht mal sehen konnten, weil sie soweit oben keine Visualisierung mehr erwartet hätten. Der Einsatz von räumlichem Audio alleine reicht also nicht aus um den Fokus auf Objekte außerhalb des natürlichen Sichtfeldes zu legen. 
+
    \begin{figure}[H]
 \centering
-\includegraphics[width = 16cm, height = 9cm]{Szene_4_data.png}
+\includegraphics[width = 13cm, height = 14 cm]{Szene_4_data_2.png}
 \caption{Visualisierung der lokalisierten Schallquellen für Szene 4}
 \label{fig:Szene_4_data}
 \end{figure} 
 
-   \begin{figure}[H]
-\centering
-\includegraphics[width = 9cm, height = 9.3 cm]{Szene_4_data_2.png}
-\caption{Visualisierung der lokalisierten Schallquellen für Szene 4}
-\label{fig:Szene_4_data_2}
-\end{figure} 
+In Abbildung \ref{fig:Szene_4_Frage1} lässt sich erkennen, dass im Vergleich zur ersten Szene mit dem selben Geräusch das Empfinden, ob Visuelles und Auditives zusammenpassen, tatsächlich etwas positiver ausfällt. Während in der ersten Szene noch für sechs Probanden das Gehörte und das Gesehene sehr wenig bis gar nicht zusammengepasst haben, so gibt es bei der vierten Szene  nur noch 3 Probanden die das Zusammenspiel so negativ bewertet haben. Der Zahl der Probanden, die bei der Frage keiner der Antworten wirklich zustimmen konnten ist hierbei dementsprechend etwas gestiegen, während der Anteil der Probanden für die die Reize zusammen passten gleich geblieben ist.\\ 
+
+Es gilt bei der Beobachtung der Ergebnisse dieser Umfrage zu beachten, dass vermutlich die wenigsten den Adler über sich wirklich gesehen haben. Das leicht verbesserte Empfinden für das Zusammenspiel des Auditiven mit dem Visuellen könnte daher unterschiedliche Gründe haben. Einer der Gründe könnte sein, dass dadurch das der Adlerschrei nun aus der Luft kommt die allgemeine Plausibilität der Szene gestiegen ist, da der inhaltliche Kontext besser zum Gesehenen passt. Ein weiterer Grund könnte sein, dass der Proband sich generell an das Tragen der HoloLens und den Anblick der Welt gewöhnt hat und daher das Visuelle anders wahrnimmt. 
+
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_4_Frage_1.png}
-\caption{Histogramm der ersten Frage des Versuches für Szene 4}
+\caption{Histogramm: Wie gut passen Visuelles und Auditives in Szene 4 zusammen ?}
 \label{fig:Szene_4_Frage1}
 \end{figure} 
+
+Anhand Abbildung \ref{fig:Szene_4_Frage2} ist zu sehen, dass zehn Probanden das Geräusch als realistische Quelle im Raum beurteilen würden. Damit sind es sogar noch mehr als bei der ersten Szene, die das Geräusch als realistisch beurteilen. Angestiegen ist jedoch auch der Anteil, der Probanden, die das Geräusch als unrealistisch bewerten. \\
+
+Die Ergebnisse könnten damit zu begründen sein, dass die meisten Probanden erkannt haben, dass das Hörereignis nicht mehr unmittelbar in der virtuellen Welt stattfand und es deshalb als plausibler eingestuft worden ist. Gleichzeitig konnten einige, wie es in Abbildung \ref{fig:Szene_4_data} gezeigt wird, nicht erkennen, dass das Geräusch nicht mehr dort ist wo es sich noch in der ersten Szene befand. Geht man davon aus, dass das Geräusch wirklich noch auf den Adlern über dem Berg liegt, dann klingt das Audio-Signal, dass an den Adler über dem Probanden angepasst worden ist natürlich unplausibel und daher unrealistisch. 
+
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_4_Frage_2.png}
-\caption{Histogramm der zweiten Frage des Versuches für Szene 4}
+\caption{Histogramm: Wie echt wirkt das Geräusch im Raum in Szene 4?}
 \label{fig:Szene_4_Frage2}
 \end{figure} 
+
+Die Darbietung von Szene 4 wurde, wie es in Abbildung \ref{fig:Szene_4_Frage3} gezeigt wird,  von vielen Probanden als deutlich angenehmer empfunden als die Darbietung der ersten beiden Szenen. Während bei der ersten Szene noch ca. 90 \% der Probanden die Darbietung eher als unheimlich empfunden haben, so haben in der vierten Szenen schon mehr als 40 \% die Darbietung als eher angenehm bewertet. Trotz dessen evoziert die Darbietung bei den meisten immer noch ein eher unangenehmes Gefühl.\\ 
+
+Das zunehmend positivere Darbietungsempfinden der Szene könnte damit zusammenhängen, dass wie bereits erwähnt das Geräusch einfach inhaltlich plausibler ist, dadurch dass es von oben kommt. Andererseits könnte die Darbietung auch durch die Gewöhnung an die HoloLens immer angenehmer werden. \\ 
+
+Theoretisch könnte aber auch die Tatsache, dass das Hörereignis nicht mehr in der unmittelbaren Umgebung des Hörenden liegt dafür verantwortlich sein, dass die Darbietung nicht mehr so unheimlich bewertet wird wie bei den anderen Szenen. Möglicherweise tritt der vermute \glqq Uncanny-Valley\grqq{}-Effekt nur dann für realistisches, räumliches Audio auf, wenn sich das Geräusch direkt vor dem Betrachter, bzw. im Sichtfeld, befindet. Da die meisten erkannt haben, dass das Hörereignis nicht direkt in der virtuellen Welt stattgefunden hat, könnte es sein, dass sie sich von diesem Geräusch auch nicht eingeschüchtert oder bedroht gefühlt haben.
+ 
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_4_Frage_3.png}
-\caption{Histogramm der dritten Frage des Versuches für Szene 4}
+\caption{Histogramm: Wie angenehm war die Darbietung von Szene 4?}
 \label{fig:Szene_4_Frage3}
 \end{figure} 
 
-SZENE 4 ENDE
+
 
  \subsection{Szene 5: Flussrauschen}
- 
- SZENE 5 ANFANG
+Die letzte Szene des Versuchs enthält im Vergleich zu den anderen Szenen zwei virtuelle Schallquellen. Als Geräusch wird das Rauschen eines Flusses über beide Schallquellen gleichermaßen wiedergegeben. Der Proabnd hat auch hier nur eine Kugel zu platzieren, da erwartet wird, dass sich eine Phantomschallquelle bilden müsste. Auch hier werden die für den Versuch gewählten Standart-Einstellungen verwendet. Die eine Schallquelle befindet sich hierbei an der Quelle des Flusses und die andere den Fluss abwärts im Boot. \\ 
+
+Abbildung \ref{fig:Szene_5_data} zeigt, dass das Hörereignis erneut sehr weit gestreut lokalisiert worden ist. Die meisten Probanden haben dabei das Hörereignis an der Quelle des Flusses wahrgenommen. Dabei ist zu erwähnen, dass die Probanden fast ausschließlich beim Lokalisieren stehengeblieben sind und daher diese virtuelle Schallquelle näher an den Probanden lag als die zweite im Boot. Nach dem Prinzip der ersten Wellenfront ergibt es also Sinn, dass die Probanden das Hörereignis fast ausschließlich bei der näheren virtuellen Schallquelle wahrgenommen haben, da der Schall dieser Quelle zu erst beim Probanden angekommen ist. Des Weiteren ist davon auszugehen, dass der inhaltliche Kontext eine Rolle bei der Platzierung der roten Kugel gespielt haben könnte, da das Flussrauschen in der Natur vor allem in der wilderen Gebirgslandschaft erwartet werden würde.\\
+
+Zwei Probanden haben die rote Kugel genau in der Mitte zwischen den beiden virtuellen Schallquellen platziert. Dies ergibt vor allem dann Sinn, wenn die Probanden sich so bewegt haben, dass die virtuellen Schallquellen beide gleich weit vom Probanden entfernt waren. Denn dann sollte sich das Hörereignis aufgrund der fehlenden interauralen Laufzeitunterschiede genau in der Mitte der beiden virtuellen Schallquellen bilden. Drei weitere Probanden haben das Hörereignis auf einer Vertikalen zur Welt mittig zwischen den virtuelle Schallquellen lokalisiert. Bei diesen hat sich also das Hörereignis also ebenfalls mittig zwischen den virtuellen Schallquellen gebildet, jedoch haben diese Probanden die Höhe des Hörereignisses anders wahrgenommen.\\ 
+
+An diesem Punkt sollte erwähnt werden, dass bei einer ausgereifteren Version des Hörversuchs neben der Position der roten Kugel auch die Position des Probanden, während der Platzierung gespeichert werden sollte. Auf diese Weise könnten bessere Aussagen darüber getroffen werden, wieso der Proband das Hörereignis so lokalisiert hat, wie er es während des Versuchs getan hat. 
+
+
+
    \begin{figure}[H]
 \centering
 \includegraphics[width = 16cm, height = 9cm]{Szene_5_data.png}
@@ -801,39 +873,44 @@ SZENE 4 ENDE
 \label{fig:Szene_5_data}
 \end{figure} 
 
-   \begin{figure}[H]
-\centering
-\includegraphics[width = 7.5cm, height = 8.5cm]{Szene_5_data_2.png}
-\caption{Visualisierung der lokalisierten Schallquellen für Szene 5}
-\label{fig:Szene_5_data_2}
-\end{figure} 
+Anhand Abbildung \ref{fig:Szene_5_Frage1} lässt sich feststellen, dass die Probanden sich bei der letzten Szene ziemlich einig sind, dass das Gesehene und das Gehörte nicht sehr gut zusammen passen. Während sieben Probanden keiner der Aussagen komplett zustimmten, so bewertete der Rest der Probanden, dass das Visuelle und das Auditive wenig bis gar nicht zusammen passen. \\
+
+Das Fließen eines Flusses ist ein sehr dynamischer Vorgang, der wie das Flussrauschen vermutlich mit sehr viel Bewegung assoziiert wird. Es ist daher davon auszugehen, dass das statische blaue Wasser in der virtuellen Welt ohne Animation nicht als plausibler visueller Reiz wahrgenommen werden kann. Unter anderem gilt dies auch, deshalb weil sich das Wasser in der virtuellen Welt nicht nach den Gesetzen der Physik verhält und einfach in der Luft schwebt ohne abzufließen. \\
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_5_Frage_1.png}
-\caption{Histogramm der ersten Frage des Versuches für Szene 5}
+\caption{Histogramm: Wie gut passen Visuelles und Auditives in Szene 5 zusammen ?}
 \label{fig:Szene_5_Frage1}
 \end{figure} 
+
+Wie sich in Abbildung \ref{fig:Szene_5_Frage2} erkennen lässt, sind auch bei der Frage, wie echt denn das Geräusch in der letzen Szene wirke, die Probanden fast ausschließlich der Meinung, dass sich das Geräusch sehr realistisch anhört.  Bis auf drei Probanden, die das Geräusch eher als offensichtlich  durch die Kopfhörer wiedergegeben bewertet haben, sind die restlichen Probanden der Meinung, dass sich das Geräusch wirklich so angehört hat als ob die Quelle im Raum wäre.\\ 
+
+Von allen Szenen des Versuches wurde das Geräusch dieser Szene als das realistischste im Raum Hörereignis bewertet. Der Einsatz mehrerer Schallquellen liefert damit also auch mit räumlichem Audio recht plausible Hörereignisse und kann unter anderem dafür genutzt werden größere, virtuelle Objekte auditiv zu unterstützen. \\ 
+
+
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_5_Frage_2.png}
-\caption{Histogramm der zweiten Frage des Versuches für Szene 5}
+\caption{Histogramm: Wie echt wirkt das Geräusch im Raum in Szene 5?}
 \label{fig:Szene_5_Frage2}
 \end{figure} 
+
+Abbildung \ref{fig:Szene_5_Frage3} zeigt, dass auch beim letzten Versuch die Darbietung wieder  als überwiegenden unheimlich bewertet worden ist. Bis auf drei Ausnahmen haben wieder alle Probanden die Darbietung als unheimlich empfunden. Bei keiner Szene vorher wurde hierbei häufiger die maximale Ausprägung des unheimlichen Darbietungsempfindens ausgewählt, wie bei der letzten Szene.\\ 
+
+Auch bei der letzten Szene korrelieren damit die Ergebnisse zum empfunden Realismus des Geräusches mit dem evozierten unheimlichen Darbietungsempfinden. Die These, dass eine realistische Umsetzung von räumlichem Audio Unbehagen auslösen könnte wurde somit durch keine der Darbietungen entschärft und hat weiterhin Bestand. 
 
    \begin{figure}[H]
 \centering
 \includegraphics[width = 18cm, height = 10cm]{Szene_5_Frage_3.png}
-\caption{Histogramm der dritten Frage des Versuches für Szene 5}
+\caption{Histogramm: Wie angenehm war die Darbietung von Szene 5?}
 \label{fig:Szene_5_Frage3}
 \end{figure} 
 
-SZENE 5 ENDE
-
  \section{Ergebnisse kritisch hinterfragen}
  
-
+%Es scheinen für die Lokalisation von virtuelle Schallquellen die ähnliche, psychoakustische Gesetze wie für die Lokalisation von wirklichen Schallquellen zu gelten. Diese These sollte jedoch im Rahmen eines ausführlicheren Hörversuchs unterscuht werden.\\
 
 
 
